--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@radix-ui/react-checkbox": "^1.3.3",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-progress": "^1.1.8",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-switch": "^1.2.6",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.19",
     "@trpc/client": "^11.8.1",
     "@trpc/react-query": "^11.8.1",
@@ -21,6 +29,7 @@
     "pixi.js": "^8.15.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-resizable-panels": "^4.4.1",
     "tailwind-merge": "^3.4.0",
     "zod": "^4.3.5"
   },
