--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@prisma/client": "^6.6.0",
     "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.8",
@@ -20,19 +21,18 @@
     "@radix-ui/react-slot": "^1.2.4",
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@tanstack/react-query": "^5.90.19",
-    "@prisma/client": "^6.6.0",
     "@react-three/cannon": "^6.6.0",
     "@react-three/drei": "^10.7.7",
     "@react-three/fiber": "^9.4.2",
     "@react-three/rapier": "^2.2.0",
+    "@tanstack/react-query": "^5.90.19",
     "@trpc/client": "^11.8.1",
     "@trpc/react-query": "^11.8.1",
     "@trpc/server": "^11.8.1",
     "@types/three": "^0.182.0",
-    "leva": "^0.10.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "leva": "^0.10.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
     "pixi.js": "^8.15.0",
@@ -40,23 +40,28 @@
     "react-dom": "19.2.3",
     "react-resizable-panels": "^4.4.1",
     "recharts": "^3.6.0",
-    "tailwind-merge": "^3.4.0",
-    "zod": "^4.3.5",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
-    "three": "^0.182.0"
-
+    "tailwind-merge": "^3.4.0",
+    "three": "^0.182.0",
+    "zod": "^4.3.5"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-ignition": "^3.0.7",
+    "@nomicfoundation/hardhat-toolbox-viem": "^5.0.2",
     "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
+    "@types/node": "^22.19.7",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.3",
+    "forge-std": "github:foundry-rs/forge-std#v1.9.4",
+    "hardhat": "^3.1.5",
+    "prisma": "^6.6.0",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5",
-    "prisma": "^6.6.0"
-  }
+    "typescript": "~5.8.0",
+    "viem": "^2.44.4"
+  },
+  "type": "module"
 }
