--- a/package.json
+++ b/package.json
@@ -35,12 +35,14 @@
     "leva": "^0.10.1",
     "lucide-react": "^0.562.0",
     "next": "16.1.3",
+    "next-themes": "^0.4.6",
     "pixi.js": "^8.15.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-resizable-panels": "^4.4.1",
     "recharts": "^3.6.0",
     "server-only": "^0.0.1",
+    "sonner": "^2.0.7",
     "superjson": "^2.2.1",
     "tailwind-merge": "^3.4.0",
     "three": "^0.182.0",
